# parker-aiohomekit

./: .gitignore  Dockerfile.test  README.md  draft.py  pylintrc  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml  test.yml
aiohomekit/: __init__.py  __main__.py  characteristic_cache.py  exceptions.py  hkjson.py  pdu.py  testing.py  tlv8.py  utils.py  uuid.py  zeroconf.py
aiohomekit/controller/: abstract.py  controller.py
aiohomekit/controller/abstract/: __init__.py  controller.py  discovery.py  pairing.py
aiohomekit/controller/ble/: bleak.py  client.py  connection.py  controller.py  discovery.py  key.py  manufacturer_data.py  pairing.py  structs.py  values.py
aiohomekit/controller/coap/: discovery.py  pairing.py
aiohomekit/controller/ip/: connection.py  discovery.py  pairing.py
aiohomekit/controller/relay/: controller.py
aiohomekit/controller/zeroconf/: controller.py  discovery.py  pairing.py  protocol.py
aiohomekit/controller/zeroconf/coap/: connection.py  controller.py  discovery.py  pairing.py  structs.py
aiohomekit/controller/zeroconf/ip/: __init__.py  connection.py  controller.py  discovery.py  pairing.py
aiohomekit/crypto/: chacha20poly1305.py  srp.py
aiohomekit/http/: __init__.py  response.py
aiohomekit/model/: __init__.py  categories.py  discovery_info.py  entity_map.py  pairing_data.py  transport_type.py  typed_dicts.py
aiohomekit/model/accessories/: __init__.py  accessories.py  accessory.py  accessory_state.py
aiohomekit/model/characteristics/: __init__.py  aliases.py  characteristic.py  characteristic_formats.py  characteristic_key.py  characteristic_types.py  permissions.py  types.py
aiohomekit/model/services/: __init__.py  service.py  service_types.py  types.py
aiohomekit/protocol/: __init__.py  statuscodes.py  tlv.py
aiohomekit/storage/: characteristics_storage.py  pairing_data_storage.py  storage.py
aiohomekit/testing/: accessoryserver.py  fakes.py  mock_zeroconf.py  utils.py
scripts/: generate_metadata.py
tests/: accessoryserver.py  conftest.py  test_coap_structs.py  test_controller.py  test_controller_ble.py  test_controller_coap.py  test_controller_coap_pdu.py  test_controller_coap_structs.py  test_controller_ip_controller.py  test_ip_discovery.py  test_ip_pairing.py  test_main.py  test_meshcop.py  test_model.py  test_testing.py  test_tlv8.py  test_utils.py  test_zeroconf.py
