[tool.poetry]
name = "parker-aiohomekit"
version = "4.0.0"
description = "An asyncio HomeKit client"
authors = ["Mark Parker <mark@parker-programs.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ParkerIndustries/parker-aiohomekit"
repository = "https://github.com/ParkerIndustries/parker-aiohomekit"
keywords = ["HomeKit", "home", "automation", "aiohomekit"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Home Automation",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
include = ["aiohomekit/py.typed"]
packages = [{include = "aiohomekit"}]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
cryptography = ">=2.9.2"
zeroconf = ">=0.132.2"
commentjson = "^0.9.0"
aiocoap = ">=0.4.5"
bleak = ">=0.22.0"
chacha20poly1305-reuseable = ">=0.12.1"
bleak-retry-connector = ">=2.9.0"
orjson = ">=3.7.8"
async-timeout = { version = ">=4.0.2" }
chacha20poly1305 = "^0.0.3"
async-interrupt = ">=1.1.1"
aiohappyeyeballs = ">=2.3.0"

[tool.poetry.dev-dependencies]
pytest-repeat = "^0.9.4"
pyright = "^1.1.402"
ruff = "^0.12.0"
isort = "^5.10.1"
black = "^24.3.0"
flake8 = "^4.0.1"
pytest = "^7.2.0"
coverage = "^6.3"
pylint = "^2.12.2"
pytest-aiohttp = "^1.0.3"
pyupgrade = "^2.31.0"
pytest-cov = "^3.0.0"
asynctest = "^0.13.0"
aiohttp = ">=3.8.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
ty = "^0.0.1a11"

[tool.black]
target-version = ["py39", "py310"]

[tool.poetry.scripts]
aiohomekitctl = "aiohomekit.__main__:sync_main"

[tool.pytest.ini_options]
minversion = "6.0"
asyncio_mode = "auto"
addopts = "--import-mode=importlib"

[tool.coverage.run]
omit = ["tests/*"]

[tool.isort]
profile = "black"
indent = "    "
force_sort_within_sections = "true"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = "aiohomekit,tests"
forced_separate = "tests"
combine_as_imports = "true"
extra_standard_library = "_socket"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
# Ignore F401, E402 (import violations) in all `__init__.py` files, and tests
"__init__.py" = ["F401"]
"**/{tests,docs,tools}/*" = ["E402"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
